--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,14 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.metadata
+#忽略class文件
+*.class
+#忽略maven编译的target文件夹
+target/
+#忽略eclipse的工程文件
+.settings/
+.mymetadata
+.idea
+*.MF
+*.iml
